# philosophers

./: .gitignore  CMakeLists.txt  Makefile  a.out  life_cycle.c  main.c  main_test.c  parser.c  philo.c  philo.h  philo.h.gch  philo_test.h  utils.c  utils_part_two.c  utils_test.c
philo/: main.c  parser.c  philo.c  philo.h
philo_bonus/: CMakeLists.txt  Makefile  life_cycle.c  main.c  parser.c  philo.c  philo.h  philo_bonus  utils.c
